Small CSS font legibility fix

--- a/assets/css/bart.degoe.de.css
+++ b/assets/css/bart.degoe.de.css
@@ -1,3 +1,9 @@
+body {
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
 .sidebar-about h1 {
     padding-bottom: 4rem;
     font-weight: 500;
